[gd_scene load_steps=2 format=2]

[ext_resource path="res://Lasers.gd" type="Script" id=1]

[node name="Lasers" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5

[node name="delayTimer" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="delayTimer" to="." method="_on_delayTimer_timeout"]
